# bevy-modular-characters-proof-of-concept

./: Cargo.toml  README.md
assets/: main_skeleton.glb  scifi_full.glb  scifi_torso.glb  sword.glb  witch_legs.glb
src/: asset_loader_plugin.rs  camera_plugin.rs  main.rs
src/modular_character_plugin/: despawn_parts.rs  link_animations.rs  mod.rs  paint_cubes_on_joints.rs  print_scene_tree.rs  run_animations.rs  spawn_scenes.rs
src/modular_character_plugin/assemble_parts/: attach_part_to_main_skeleton.rs  collect_bones.rs  despawn_attached_part.rs  find_child_with_name_containing.rs  get_main_skeleton_bones_and_armature.rs  mod.rs
